--- a/src/about.html
+++ b/src/about.html
@@ -252,6 +252,8 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="container container_big">
 				<div class="about__geo">
 					<h2>
 						ГЕОГРАФИЯ ПРОДАЖ В РФ И ЭКСПОРТА В СНГ
