--- a/src/contacts.html
+++ b/src/contacts.html
@@ -231,7 +231,7 @@
 						<form action="#" class="contacts__form">
 							<div class="contacts__flex q">
 								<div class="contacts__item">
-									<label>
+									<label class="grey">
 										Имя
 									</label>
 									<input type="text" placeholder="Укажите ваше имя">
@@ -243,7 +243,7 @@
 									<input type="text" placeholder="Укажите название компании или магазина">
 								</div>
 								<div class="contacts__item">
-									<label>
+									<label class="grey">
 										Email
 									</label>
 									<input type="email" placeholder="Укажите ваш email">
@@ -275,7 +275,7 @@
 								</div>
 							</div>
 							<div class="contacts__item">
-								<label>
+								<label class="grey">
 									Сообщение
 								</label>
 								<textarea name="text" placeholder="Напишите сообщение"></textarea>
