--- a/src/cornices.html
+++ b/src/cornices.html
@@ -166,7 +166,7 @@
 					</a>
 				</div>
 				<h1>
-					Air motor 7000
+					Управление для карниза Air motor 7000
 				</h1>
 				<div class="corn__row q">
 					<div class="corn__block corn__block_1">
@@ -317,7 +317,7 @@
 									10 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 								<td>
 									<img src="/img/c7.png" alt="">
@@ -357,7 +357,7 @@
 									10 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 								<td>
 									<img src="/img/c7.png" alt="">
@@ -397,7 +397,7 @@
 									10 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 								<td>
 									<img src="/img/c7.png" alt="">
@@ -481,7 +481,7 @@
 				</div>
 				<div class="rem-item__bottom corn__bottom">
 					<h2>
-						Похожие <span>модели</span>
+						Похожие модели
 					</h2>
 					<div class="catalog-item__box curtains-item__box q">
 						<a href="#" class="catalog-item__block">
