--- a/src/curtains-item.html
+++ b/src/curtains-item.html
@@ -168,10 +168,10 @@
 				<h1>
 					AIR MOTOR 6150W / 6150B / 5154 / 6158
 				</h1>
-				<a href="#" class="news-item__link" download="">
+				<a href="#" class="news-item__link news-item__link_2" download="">
 					<img src="/img/pff.svg" alt="">
 				</a>
-				<div class="rem-item__box q">
+				<div class="rem-item__box rem-item__box_2 q">
 					<div class="curtains-item__slider">
 						<div class="slider">
 							<div class="slider__item"><img src="/img/big.png" alt=""></div>
@@ -289,7 +289,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 							<tr>
@@ -328,7 +328,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 							<tr>
@@ -367,7 +367,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 						</tbody>
