--- a/src/curtains-item2.html
+++ b/src/curtains-item2.html
@@ -168,10 +168,10 @@
 				<h1>
 					Система зимний сад
 				</h1>
-				<a href="#" class="news-item__link" download="">
+				<a href="#" class="news-item__link news-item__link_2" download="">
 					<img src="/img/pff.svg" alt="">
 				</a>
-				<div class="rem-item__box q">
+				<div class="rem-item__box rem-item__box_2 q">
 					<div class="curtains-item__slider">
 						<div class="slider">
 							<div class="slider__item"><img src="/img/big2.png" alt=""></div>
