--- a/src/curtains2.html
+++ b/src/curtains2.html
@@ -166,7 +166,7 @@
 						Римские шторы с электроприводом
 					</a>
 				</div>
-				<h2>
+				<h2 class="h2">
 					Римские шторы <span>с электроприводом</span>
 				</h2>
 				<div class="catalog-item__scroll">
@@ -230,7 +230,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 							<tr>
@@ -269,7 +269,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 							<tr>
@@ -308,7 +308,7 @@
 									40 м
 								</td>
 								<td>
-									40 м
+									40 kg
 								</td>
 							</tr>
 						</tbody>
