--- a/src/buy.html
+++ b/src/buy.html
@@ -26,6 +26,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
 		rel="stylesheet">
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
@@ -443,6 +444,7 @@
 				font-style: normal;
 				font-weight: 700;
 				line-height: normal;
+				font-family: 'Open Sans', sans-serif;
 				text-transform: uppercase;
 				display: block;
 			}
@@ -463,6 +465,7 @@
 				font-size: 15px;
 				font-style: normal;
 				font-weight: 600;
+				font-family: 'Open Sans', sans-serif;
 				margin-bottom: 9px;
 				line-height: 25px;
 			}
@@ -492,6 +495,7 @@
 				color: #343434;
 				font-size: 15px;
 				font-style: normal;
+				font-family: 'Open Sans', sans-serif;
 				margin-bottom: 32px;
 				font-weight: 400;
 				line-height: 25px;
@@ -502,6 +506,7 @@
 			.txt4 {
 				color: #343434;
 				font-size: 16px;
+				font-family: 'Open Sans', sans-serif;
 				font-style: normal;
 				font-weight: 600;
 				margin-bottom: 18px;
