--- a/src/main.html
+++ b/src/main.html
@@ -33,7 +33,7 @@
 
 <body>
 	<div class="body-wrap">
-		<header class="header" id="header">
+		<header class="header main" id="header">
 			<nav class="nav">
 				<div class="container">
 					<div class="nav__top q">
