--- a/src/use.html
+++ b/src/use.html
@@ -193,14 +193,18 @@
 						</a>
 					</div>
 				</div>
-				<div class="use__row q">
-					<p>
-						<span> Управляйте</span> <br>
-						с комфортом
-					</p>
-					<img src="/img/pic3.png" alt="" class="use__img use__img_1">
-					<img src="/img/pic4.png" alt="" class="use__img use__img_2">
-					<img src="/img/pic5.png" alt="" class="use__img use__img_3">
+			</div>
+			<div class="use__new">
+				<div class="container">
+					<div class="use__row q">
+						<p>
+							<span> Управляйте</span> <br>
+							с комфортом
+						</p>
+						<img src="/img/pic3.png" alt="" class="use__img use__img_1">
+						<img src="/img/pic4.png" alt="" class="use__img use__img_2">
+						<img src="/img/pic5.png" alt="" class="use__img use__img_3">
+					</div>
 				</div>
 			</div>
 		</section>
